# markdown-air

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
src/: main.ts  markdown.ts  state.ts  styles.css  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
